# mndot_anomaly_detection

./: .gitignore  README.md  _pyproject.toml  apn_parquet.ipynb  app.py  app_1.py  app_2.py  from_dwg.ipynb  gdb_creation.ipynb  gdb_scratch.ipynb  kmz_conversion.ipynb  kmz_gpd.ipynb  kmz_pipeline.ipynb  logger.py  map_fix.ipynb  map_trial.ipynb  map_utils.py  mndot_api.py  mndot_app.py  parquet_creation.ipynb  pyproject.toml  requirements.txt  run.sh  simple_app.py  simple_map_utils.py  srun.sh  tid_api.sh  ugr.html
.streamlit/: config.toml
data/: 2023-0620 Frick Unit Pipeline Aligment.kml  Block Reference [9194F].lyrx  Frick Unit Areas.lyrx  Frick Unit.lyrx  Full-2024-01-23.parquet  Full-2024-02-23.parquet  Full-2024-04-30.parquet  Full-2024-06-06.parquet  Full-2024-07-26.parquet  Full-2024-07-31.parquet  Simple-2024-01-23.parquet  Simple-2024-02-22.parquet  Simple-2024-02-23.parquet  Simple-2024-04-30.parquet  Simple-2024-06-06.parquet  Simple-2024-07-26.parquet  Simple-2024-07-31.parquet  __init__.py  apn_gdf_sa.parquet  apns.parquet  config.xlsx  detectors_sample.csv  gdf-2023-08-15.parquet  gdf-2023-10-13.parquet  gdf-2023-10-16.parquet  gdf-2024-01-15.parquet  gdf-2024-01-16.parquet  gdf-2024-01-17.parquet  gdf.parquet  pipes.parquet
data/Block Reference 9194F.gdb/: a00000004.FDO_UUID.atx  a00000004.gdbtable  (+6 more)
util/: apn_parquet.ipynb  app_to_html.ipynb  attached_dwg.dxf  combine_parquets.ipynb  from_dwg.ipynb  gdb_creation.ipynb  gdb_scratch.ipynb  kmz_to_parquet.ipynb  map_utils.py  parquet_creation.ipynb  parquet_creation.py  simple_map_utils.py
(+36 files in other folders)
