[tool.poetry]
name = "streamlit_data_management"
version = "0.1.1"
description = ""
authors = ["Denver Noell <dnoell@ppeng.com>"]

[tool.poetry.dependencies]
# python = "^3.9"
# streamlit used 3.9.16 so ^3.10 doesn't work
python = "^3.9.17"
# plotly = "^5.12.0"
# pandas = "^1.5.2"
pandas = "^2.2.1"
arrow = "^1.2.3"
ipykernel = "^6.21.3"
# streamlit = "^1.20.0"
tomli = "^2.0.1"
loguru = "^0.7.2"


# geopandas = "^0.12.2"
geopandas = "1.0.0"
leafmap = "^0.18.3"
openpyxl = "=3.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
